Use configmap to inject my.cnf
`% kubectl create configmap mysql56-master-conf.d --from-file=conf.d`

--- a/config/mysql56-master/mysql56-master.yaml
+++ b/config/mysql56-master/mysql56-master.yaml
@@ -29,8 +29,13 @@ spec:
           volumeMounts:
             - name: mysql56-master-persistent-storage
               mountPath: /var/lib/mysql
+            - name: mysql56-master-configs
+              mountPath: /etc/mysql/conf.d
       volumes:
       - name: mysql56-master-persistent-storage
         persistentVolumeClaim:
           claimName: mysql56-master-pvc
+      - name: mysql56-master-configs
+        configMap:
+          name: mysql56-master-conf.d
 ---
