--- a/config/mysql56-primary/service.yaml
+++ b/config/mysql56-primary/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql56-master-svc
+  name: mysql56-primary-svc
   labels:
     app: dev
 spec:
@@ -11,5 +11,5 @@ spec:
       protocol: TCP
   selector:
     app: dev
-    tier: db-master
+    tier: db-primary
   type: LoadBalancer
