--- a/config/mysql56-primary/volume-claim.yaml
+++ b/config/mysql56-primary/volume-claim.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql56-master-pvc
+  name: mysql56-primary-pvc
   labels:
     app: dev
 spec:
-  storageClassName: mysql56-master-volume
+  storageClassName: mysql56-primary-volume
   accessModes:
     - ReadWriteOnce
   resources:
