--- a/config/mysql56-primary/volume.yaml
+++ b/config/mysql56-primary/volume.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: mysql56-master-pv
+  name: mysql56-primary-pv
   labels:
     type: local
 spec:
-  storageClassName: mysql56-master-volume
+  storageClassName: mysql56-primary-volume
   capacity:
     storage: 100Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/Users/nakamura/var/k8-local/mysql56-master"
+    path: "/Users/nakamura/var/k8-local/mysql56-primary"
